--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <div class="art"></div>
   <video id="audioSource" src="audio.mp4"></video>
 
-    <!-- <div class="info">
-      <h3>Midnight Roses</h3>
-      <p>Dark Floral Mix</p>
-    </div> -->
+    <div class="info">
+      <h3>Play</h3>
+      <p style="font-size: 20px;">⬇</p>
+    </div>
 
     <div class="controls">
       <button>⏮</button>
