remove progress bar

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
       <button>⏭</button>
     </div>
 
-    <div class="progress">
+    <!-- <div class="progress">
       <span></span>
-    </div>
+    </div> -->
   </div>
 
 </body>
